# ChangeLog for app-admin/eselect-ruby
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-ruby/ChangeLog,v 1.34 2010/04/02 20:01:18 a3li Exp $

*eselect-ruby-20100402 (02 Apr 2010)

  02 Apr 2010; Alex Legler <a3li@gentoo.org> +eselect-ruby-20100402.ebuild:
  Version bump. Provide support for the soon-to-be-added Ruby Enterprise
  Edition

  13 Jan 2010; Alex Legler <a3li@gentoo.org> -eselect-ruby-20090909.ebuild:
  Remove old ebuild

  13 Jan 2010; Alex Legler <a3li@gentoo.org> eselect-ruby-20091225.ebuild:
  amd64 stable, security bug 300468

  13 Jan 2010; Raúl Porcel <armin76@gentoo.org>
  eselect-ruby-20091225.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #300468

  12 Jan 2010; Jeroen Roovers <jer@gentoo.org> eselect-ruby-20091225.ebuild:
  Stable for HPPA (bug #300468).

  11 Jan 2010; Brent Baude <ranger@gentoo.org> eselect-ruby-20091225.ebuild:
  Marking eselect-ruby-20091225 ppc64 and ppc for bug 300468

  11 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  eselect-ruby-20091225.ebuild:
  stable x86, security bug 300468

  06 Jan 2010; Alex Legler <a3li@gentoo.org> -eselect-ruby-20081227.ebuild:
  Remove old version

  02 Jan 2010; Brent Baude <ranger@gentoo.org> eselect-ruby-20090909.ebuild:
  Marking eselect-ruby-20090909 ppc64 for bug 288699

*eselect-ruby-20091225 (25 Dec 2009)

  25 Dec 2009; Alex Legler <a3li@gentoo.org> +eselect-ruby-20091225.ebuild:
  Version bump, adds brief output mode (bug #292113), thanks to Ulrich
  Müller (ulm) for the patch. Two minor fixes in the 'cleanup' task.

  15 Dec 2009; Raúl Porcel <armin76@gentoo.org>
  eselect-ruby-20090909.ebuild:
  ia64/s390/sh stable wrt #288699

  11 Nov 2009; Tiago Cunha <tcunha@gentoo.org> eselect-ruby-20090909.ebuild:
  stable sparc, bug 288699

  25 Oct 2009; Markus Meier <maekke@gentoo.org>
  eselect-ruby-20090909.ebuild:
  arm stable, bug #288699

  25 Oct 2009; Markus Meier <maekke@gentoo.org>