@@ -1,6 +1,8 @@
 DIST ruby.eselect-20091225.bz2 1821 RMD160 3c59b00b9ef8eb429f574a1524aecb21265f27d7 SHA1 723b96a767c8f6b94796291b561c707d502fcd8d SHA256 9f5a97299fb2cdaaa76fabcff1a33e8f5a13f26621c03c8ea941aa25d4b69f7a
 DIST ruby.eselect-20100402.bz2 1825 RMD160 2d3bc397e576013bb48803fc765154156efd41bf SHA1 a0b4d31374419c024e2c30ba939f9782566e7ba9 SHA256 5ffb5e01c45972674257404493089533a8557f49e2dd336113615f9b629a86c0
+DIST ruby.eselect-20100603.bz2 1869 RMD160 d21882dda42657d14224ff4d58ca838123a62e03 SHA1 5db469b52b095ff288780f9eff6a144f07554a5f SHA256 043313957e9bf489b7db8fcfe198ea7851e421f1021f7d4b3758fc90efb5a69f
 EBUILD eselect-ruby-20091225.ebuild 860 RMD160 d6130b02582f387d56f8fffda37e642540f813c6 SHA1 7b2e3b68e4b58f118501ce8a3e621ecfe10d7032 SHA256 70900debe554a2c2bf2caefca2d1dba1180a5c80dfe7974a117799ba8ff6d4a7
 EBUILD eselect-ruby-20100402.ebuild 860 RMD160 9bef8c49046d62805c9e35a1871de5ebbd9d6062 SHA1 a91dc3be5eab615e1c2e616d89058350da05c94c SHA256 4de9e0631b22d777e2788c75682922efa9fe48112f549d01acd2aeb46d85c454
-MISC ChangeLog 4808 RMD160 5b72e24824595bb5a4bcb1076a649a80f07b5083 SHA1 a41d06f60912576bb3c07bed9997cf618b9acca6 SHA256 ec0906226b4a774e5bfc709a0be73a58f187bcadeaa38d962b4f3855911208fc
+EBUILD eselect-ruby-20100603.ebuild 860 RMD160 078744add28c37d7ef2804c51e717b354e6182a8 SHA1 22c39570410382997acced89c1be480cacc9332f SHA256 f41b0b7f70c66863eaa4e3aab490d94cb6f8987e8c67ca7ac94cefce905c9809
+MISC ChangeLog 5088 RMD160 5926d47bda09ea5f8ffd99ccbcff7a6ad9152041 SHA1 c42a6770d2e861e95ebf1858a4553bafd306d2f8 SHA256 ec1fe59ab5abfdd26107c911f2a9425e4934ed241ab24590c5fdcd9c3306e531
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
