@@ -1,0 +1,25 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-ruby/eselect-ruby-20100603.ebuild,v 1.1 2010/06/03 14:40:12 a3li Exp $
+
+DESCRIPTION="Manages multiple Ruby versions"
+HOMEPAGE="http://www.gentoo.org"
+SRC_URI="http://dev.a3li.li/gentoo/distfiles/ruby.eselect-${PVR}.bz2"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~x64-freebsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+IUSE=""
+
+RDEPEND=">=app-admin/eselect-1.0.2"
+
+src_unpack() {
+	unpack ${A}
+	sed -i -e "/^\(bindir\|man1dir\)=/s|=|=\"${EPREFIX}\"|" \
+		ruby.eselect-${PVR} || die "failed to prefixify"
+}
+
+src_install() {
+	insinto /usr/share/eselect/modules
+	newins "${WORKDIR}/ruby.eselect-${PVR}" ruby.eselect || die
+}
